Fix min-width for #mainWrap in IE

--- a/nlw/share/skin/s3/css/screen.ie.css
+++ b/nlw/share/skin/s3/css/screen.ie.css
@@ -51,7 +51,8 @@ html body div#st-edit-mode-container div#controls div#controlsRight {
     width: 10px !important;
 }
 
-html div#mainWrap {
+html div#mainWrap,
+html body#dashBoard div#mainWrap {
     width: expression( (document.body.clientWidth * 0.9 > 950) ? '90%' : '950px' );
 }
 
